# hyperlight-zstandard

./: Cargo.toml  MANIFEST.in  README.rst  bench.py  make_cffi.py  pyproject.toml  setup.py  setup_zstd.py
.github/: dependabot.yml
.github/workflows/: anaconda.yml  external-zstd.yml  pypy.yml  ruff.yml  sdist.yml  sphinx.yml  test.yml  typing.yml  wheel.yml  zizmor.yml
c-ext/: backend_c.c  bufferutil.c  compressionchunker.c  compressiondict.c  compressionparams.c  compressionreader.c  compressionwriter.c  compressobj.c  compressor.c  compressoriterator.c  constants.c  decompressionreader.c  decompressionwriter.c  decompressobj.c  decompressor.c  decompressoriterator.c  frameparams.c  hyperlight-zstandard.h
ci/: download-artifacts.py  requirements.docs.txt  requirements.txt
ci/conda/: meta.yaml
debian/: changelog  control
docs/: api_usage.rst  conf.py  index.rst  installing.rst  news.rst  projectinfo.rst
rust-ext/src/: lib.rs
tests/: test_module_attributes.py  test_subinterpreters.py
zstandard/: __init__.py  __init__.pyi
zstd/: zstd.c
