[project]
name = "zstandard"
dynamic = ["version"]
description = "Zstandard bindings for Python"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Gregory Szorc", email = "gregory.szorc@gmail.com" },
]
license = "BSD-3-Clause"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Free Threading :: 1 - Unstable",
]
keywords = ["zstandard", "zstd", "compression"]
dependencies = []

[project.urls]
Homepage = "https://github.com/adalundhe/hyperlight-zstandard"
Documentation = "https://hyperlight-zstandard.readthedocs.io/en/latest/"

[build-system]
requires = [
    "packaging",
    "setuptools>=77.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
zstandard = ["__init__.pyi", "py.typed"]

[dependency-groups]
dev = [
    "hypothesis==6.111.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
# The C and Rust backend modules are compiled extensions without stubs
[[tool.mypy.overrides]]
module = ["zstandard.backend_c", "zstandard.backend_rust"]
ignore_missing_imports = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.cibuildwheel]
enable = ["cpython-freethreading", "cpython-prerelease"]
build-frontend = "build[uv]"

# Turn compiler warnings into errors.
environment = "ZSTD_WARNINGS_AS_ERRORS=1"

test-command = "pytest -v --numprocesses=auto"
test-groups = ["dev"]
test-sources = ["tests"]
